Added Extent Reports capability

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>motorCycleInsuranceCalculation</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>motorCycleInsuranceCalculation1</td>
+<td>motorCycleInsuranceCalculation_Test2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -32,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>getResult</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
