--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aba872">  <td>19/11/07 23:10:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VehicalInsuranceCalculator.ApplicationLogin()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@50b494a6]">&gt;&gt;ApplicationLogin</td> 
-<td>&nbsp;</td>  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>19/11/07 23:11:03</td>   <td>28765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VehicalInsuranceCalculator.motorCycleInsuranceCalculation()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@50b494a6]">motorCycleInsuranceCalculation</td> 
-  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>19/11/07 23:11:03</td>   <td>28778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VehicalInsuranceCalculator.tearDown()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@50b494a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>19/11/07 23:11:03</td>   <td>28842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VehicalInsuranceCalculator.ApplicationLogin()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@50b494a6]">&gt;&gt;ApplicationLogin</td> 
-<td>&nbsp;</td>  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>19/11/07 23:11:03</td>   <td>29125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VehicalInsuranceCalculator.motorCycleInsuranceCalculation1()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@50b494a6]">motorCycleInsuranceCalculation1</td> 
-  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>19/11/07 23:11:03</td>   <td>29137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VehicalInsuranceCalculator.tearDown()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@50b494a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1863932867</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>19/11/09 16:19:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VehicalInsuranceCalculator.startReport()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@22a67b4]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>19/11/09 16:19:43</td>   <td>173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VehicalInsuranceCalculator.ApplicationLogin()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@22a67b4]">&gt;&gt;ApplicationLogin</td> 
+<td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>19/11/09 16:19:55</td>   <td>11669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VehicalInsuranceCalculator.motorCycleInsuranceCalculation_Test2()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@22a67b4]">motorCycleInsuranceCalculation_Test2</td> 
+  <td>main@1166807841</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>19/11/09 16:20:05</td>   <td>21874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VehicalInsuranceCalculator.getResult(org.testng.ITestResult)[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@22a67b4]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>19/11/09 16:20:05</td>   <td>21887</td> <td>&nbsp;</td><td title="&lt;&lt;VehicalInsuranceCalculator.endReport()[pri:0, instance:com.automationtalks.RegressionSuite.VehicalInsuranceCalculator@22a67b4]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
